# nios-discovery-mcp

./: .env.example  .gitignore  .mcp.json.example  LICENSE  README.md  chunk_push_discovery.py  cli.py  device_limits.py  dns_csv.py  mark_discovered.py  mcp_server.py  network_hierarchy.py  nios_client.py  pyproject.toml  simulator.py  themes.py
docs/: CSV_FORMAT.md  LESSONS_LEARNED.md
schema/: discovery_schema.json
skills/nios-discovery/: SKILL.md
templates/: template_endpoint.csv  template_l3_switch.csv  template_wireless_ap.csv
